main/default/objects/Quote_Process__c/Quote_Process__c.object-meta.xml
<CustomObject>
    <label>Underwriter Workbench</label>
    <nameField>
        <label>Quote Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Underwriter Workbench</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>