main/default/objects/Quote_Process__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insured Info</fullName>
                <default>true</default>
                <label>Insured Info</label>
            </value>
            <value>
                <fullName>Submission Console</fullName>
            </value>
            <value>
                <fullName>Underwriting Console</fullName>
            </value>
            <value>
                <fullName>Submission Info</fullName>
            </value>
            <value>
                <fullName>Underwritting Analysis</fullName>
                <label>Underwriting Analysis</label>
            </value>
            <value>
                <fullName>Compare &amp; Rate Quotes</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Quote Console</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <isActive>false</isActive>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Pre-Screening</fullName>
                <isActive>false</isActive>
                <label>Pre-Screening</label>
            </value>
            <value>
                <fullName>Quote Version Console</fullName>
                <isActive>false</isActive>
                <label>Quote Version Console</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>