main/default/objects/Quote_Process__c/fields/Submission_Product__c.field-meta.xml
<CustomField>
    <fullName>Submission_Product__c</fullName>
    <formula>Submission__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Product</label>
    <type>Text</type>
</CustomField>