main/default/objects/Quote_Process__c/fields/Submission_Stage__c.field-meta.xml
<CustomField>
    <fullName>Submission_Stage__c</fullName>
    <formula>Text( Submission__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Stage</label>
    <type>Text</type>
</CustomField>