main/default/objects/Quote_Process__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <formula>Text( Submission__r.Submission_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Status</label>
    <type>Text</type>
</CustomField>